--- a/penis/index.html
+++ b/penis/index.html
@@ -3,4 +3,4 @@ layout: default
 title: "SERUM"
 ---
 
-<img src="gershman10.github.io/bonobo_luv.jpeg" alt="<-3" height="480" width="1000" />
+<img src="gershman10.github.io/bonobo_luv.jpeg" height="480" width="1000" />
