--- a/penis/index.html
+++ b/penis/index.html
@@ -4,3 +4,6 @@ title: "SERUM"
 ---
 
 <img src="/bonobo_luv.jpeg" height="900" width="1200" />
+
+<embed width="420" height="315"
+src="https://www.youtube.com/embed/bISD9hQQ4Wg">
