--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: SERUM
 ---
 <div class="blurb">
 	<h1>SERUM</h1>
-	<p>PUNY HUMANS SHALL PERISH FROM THIS WET ROCK</p>
+	<p>PUNY HUMANS SHALL BE CRUSHED UNDER THE MIGHTY FISTS OF MORBO</p>
 </div><!-- /.blurb -->
